Replaced Integer constructor with method valueOf