@@ -48,7 +48,7 @@ public class TreeReaderTest
 
         Assert.assertNotNull(result);
         Assert.assertEquals(expected, result.getFirst());
-        Assert.assertEquals(new Integer(3), result.getSecond());
+        Assert.assertEquals(Integer.valueOf(3), result.getSecond());
     }
 
     @Test
@@ -75,7 +75,7 @@ public class TreeReaderTest
 
             repeat.setLeft(new StandardNode("6", 5));
             repeat.setRight(
-                new StandardNode("7", 4, new RecNode(repeat, 9), new StandardNode("9", 8)));
+                    new StandardNode("7", 4, new RecNode(repeat, 9), new StandardNode("9", 8)));
             expected = new StandardNode("1", 1, new StandardNode("2", 3, new StandardNode("3", 7),
                                                                  new StandardNode("4", 6)), repeat);
         }
@@ -87,7 +87,7 @@ public class TreeReaderTest
 
         Assert.assertNotNull(result);
         Assert.assertEquals(expected, result.getFirst());
-        Assert.assertEquals(new Integer(4), result.getSecond());
+        Assert.assertEquals(Integer.valueOf(4), result.getSecond());
     }
 
     @Test
@@ -114,12 +114,12 @@ public class TreeReaderTest
             RepeatNode repeat7 = new RepeatNode("7", 11);
 
             repeat7.setLeft(
-                new StandardNode("8", 23, new RecNode(repeat7, 47), new RecNode(repeat7, 46)));
+                    new StandardNode("8", 23, new RecNode(repeat7, 47), new RecNode(repeat7, 46)));
             repeat7.setRight(new StandardNode("11", 22));
 
             repeat5.setLeft(new StandardNode("6", 5, repeat7, new RecNode(repeat5, 10)));
             repeat5.setRight(
-                new StandardNode("13", 4, new RecNode(repeat5, 9), new StandardNode("15", 8)));
+                    new StandardNode("13", 4, new RecNode(repeat5, 9), new StandardNode("15", 8)));
 
             expected = new StandardNode("1", 1, new StandardNode("2", 3, new StandardNode("3", 7),
                                                                  new StandardNode("4", 6)),
@@ -133,12 +133,12 @@ public class TreeReaderTest
 
         Assert.assertNotNull(result);
         Assert.assertEquals(expected, result.getFirst());
-        Assert.assertEquals(new Integer(6), result.getSecond());
+        Assert.assertEquals(Integer.valueOf(6), result.getSecond());
     }
 
     @Test(expected = TreeParsingException.class)
     public void testReadWhenRecOutOfScope()
-        throws SAXException
+            throws SAXException
     {
         try
         {
@@ -163,7 +163,7 @@ public class TreeReaderTest
 
     @Test(expected = OneChildException.class)
     public void testReadWhenOneChild()
-        throws SAXException
+            throws SAXException
     {
         try
         {
@@ -188,12 +188,12 @@ public class TreeReaderTest
 
     @Test(expected = TreeDepthException.class)
     public void testReadWhenTreeDepthIsViolated()
-        throws SAXException
+            throws SAXException
     {
         try
         {
             testObject = new TreeReader(
-                new File(DIRECTORY + "testReadWhenTreeDepthIsViolated.tree.xml"));
+                    new File(DIRECTORY + "testReadWhenTreeDepthIsViolated.tree.xml"));
         }
         catch(Exception e)
         {
@@ -214,7 +214,7 @@ public class TreeReaderTest
 
     @Test(expected = TreeParsingException.class)
     public void testReadWhenThreeChildren()
-        throws SAXException
+            throws SAXException
     {
         try
         {
